--- a/docs/.vitepress/theme/vars.css
+++ b/docs/.vitepress/theme/vars.css
@@ -50,6 +50,16 @@
 	--vp-c-red-dimm-3: rgba(244, 63, 94, 0.05);
 
 	--vp-c-pink: #fe97dc;
+
+	--rounded-none: 0;
+	--rounded-sm: 0.125rem;
+	--rounded: 0.25rem;
+	--rounded-md: 0.375rem;
+	--rounded-lg: 0.5rem;
+	--rounded-xl: 0.75rem;
+	--rounded-2xl: 1rem;
+	--rounded-3xl: 1.5rem;
+	--rounded-full: 9999px;
 }
 
 /**
