--- a/docs/.vitepress/theme/vars.css
+++ b/docs/.vitepress/theme/vars.css
@@ -50,16 +50,6 @@
 	--vp-c-red-dimm-3: rgba(244, 63, 94, 0.05);
 
 	--vp-c-pink: #fe97dc;
-
-	--rounded-none: 0;
-	--rounded-sm: 0.125rem;
-	--rounded: 0.25rem;
-	--rounded-md: 0.375rem;
-	--rounded-lg: 0.5rem;
-	--rounded-xl: 0.75rem;
-	--rounded-2xl: 1rem;
-	--rounded-3xl: 1.5rem;
-	--rounded-full: 9999px;
 }
 
 /**
@@ -83,6 +73,22 @@
 	--vp-c-purple-dimm-3: rgba(159, 132, 255, 0.1);
 
 	--vp-c-divider: rgba(82, 82, 89, 0.32);
+}
+
+/**
+ * Globals
+ * -------------------------------------------------------------------------- */
+
+:root {
+	--rounded-none: 0;
+	--rounded-sm: 0.125rem;
+	--rounded: 0.25rem;
+	--rounded-md: 0.375rem;
+	--rounded-lg: 0.5rem;
+	--rounded-xl: 0.75rem;
+	--rounded-2xl: 1rem;
+	--rounded-3xl: 1.5rem;
+	--rounded-full: 9999px;
 }
 
 /**
