--- a/packages/webcontainer/src/style.css
+++ b/packages/webcontainer/src/style.css
@@ -4,14 +4,10 @@
 
 body {
 	margin: 0;
-	height: 100vh;
 }
 
 .container {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 1rem;
-	height: 100%;
+	margin-bottom: 30px;
 	width: 100%;
 }
 
@@ -26,7 +22,7 @@ textarea {
 }
 
 iframe {
-	height: 100%;
+	height: 40vh;
 	width: 100%;
 	border-radius: 0.5rem;
 }
