--- a/packages/webcontainer/src/assets/main.scss
+++ b/packages/webcontainer/src/assets/main.scss
@@ -3,6 +3,7 @@
 @import 'themes/dark';
 @import 'themes/light';
 @import 'tooltip';
+@import 'codemirror';
 
 :root {
 	--family-monospace: 'Fira Mono', monospace, sans-serif;
@@ -55,10 +56,6 @@ button {
 * {
 	box-sizing: border-box;
 
-	&:focus-visible {
-		outline: none;
-		box-shadow: 0 0 0px 2.5px var(--primary-50);
-	}
 }
 
 body.light {
@@ -86,28 +83,28 @@ body.auto {
 
 
 body .content {
-		width: 100%;
-		height: 100%;
-		z-index: 101;
-		background-color: var(--background-page);
+	width: 100%;
+	height: 100%;
+	z-index: 101;
+	background-color: var(--background-page);
 
-		&.fullscreen {
-			width: 100vw;
-			height: 100vh;
-			position: absolute;
-			top: 0;
-			left: 0;
-		}
-
-		.close-fullscreen {
-			position: absolute;
-			top: 10px;
-			left: 10px;
-			width: 10px;
-			height: 10px;
-			z-index: 102;
-			cursor: pointer;
-			border-radius: 50%;
-			background-color: var(--warning);
-		}
+	&.fullscreen {
+		width: 100vw;
+		height: 100vh;
+		position: absolute;
+		top: 0;
+		left: 0;
 	}
+
+	.close-fullscreen {
+		position: absolute;
+		top: 10px;
+		left: 10px;
+		width: 10px;
+		height: 10px;
+		z-index: 102;
+		cursor: pointer;
+		border-radius: 50%;
+		background-color: var(--warning);
+	}
+}
