add loading extensions from storage adapters

--- a/api/src/cli/utils/create-env/env-stub.liquid
+++ b/api/src/cli/utils/create-env/env-stub.liquid
@@ -171,6 +171,9 @@ STORAGE_LOCATIONS="local"
 STORAGE_LOCAL_DRIVER="local"
 STORAGE_LOCAL_ROOT="./uploads"
 
+STORAGE_EXTENSIONS_DRIVER="local"
+STORAGE_EXTENSIONS_ROOT="./extensions"
+
 ## S3 Example (location name: DigitalOcean)
 # STORAGE_DIGITALOCEAN_DRIVER="s3"
 # STORAGE_DIGITALOCEAN_KEY="abcdef"
