--- a/app/src/styles/_base.scss
+++ b/app/src/styles/_base.scss
@@ -24,7 +24,7 @@ body {
 	font-family: var(--family-sans-serif);
 	font-style: normal;
 	line-height: 22px;
-	background-color: var(--background-page);
+	background-color: var(--theme--background);
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
 	-moz-osx-font-smoothing: grayscale;
