--- a/app/src/styles/lib/_codemirror.scss
+++ b/app/src/styles/lib/_codemirror.scss
@@ -48,7 +48,7 @@
 
 .CodeMirror-scrollbar-filler,
 .CodeMirror-gutter-filler {
-	background-color: var(--background-page); /* The little square between H and V scrollbars */
+	background-color: var(--theme--background); /* The little square between H and V scrollbars */
 }
 
 /* GUTTER */
