--- a/app/src/styles/_base.scss
+++ b/app/src/styles/_base.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	color: var(--foreground-normal);
+	color: var(--theme--foreground);
 	font-weight: 500;
 	font-size: 14px;
 	font-family: var(--family-sans-serif);
