--- a/app/src/styles/lib/_fullcalendar.scss
+++ b/app/src/styles/lib/_fullcalendar.scss
@@ -75,7 +75,7 @@
 
 			&:not(:disabled) {
 				&:hover {
-					--fc-button-text-color: var(--foreground-normal);
+					--fc-button-text-color: var(--theme--foreground);
 				}
 
 				&:active:focus,
