--- a/app/src/styles/lib/_codemirror.scss
+++ b/app/src/styles/lib/_codemirror.scss
@@ -3,7 +3,7 @@
 .CodeMirror {
 	width: 100%;
 	height: auto;
-	color: var(--foreground-normal);
+	color: var(--theme--foreground);
 	font-weight: inherit;
 	font-family: var(--family-monospace);
 	line-height: 22px;
@@ -79,7 +79,7 @@
 .CodeMirror-cursor {
 	width: 0;
 	border-right: none;
-	border-left: 1px solid var(--foreground-normal);
+	border-left: 1px solid var(--theme--foreground);
 }
 
 /* Shown when moving in bi-directional text */
@@ -222,10 +222,10 @@
 	color: var(--warning);
 }
 .cm-s-default .cm-meta {
-	color: var(--foreground-normal);
+	color: var(--theme--foreground);
 }
 .cm-s-default .cm-qualifier {
-	color: var(--foreground-normal);
+	color: var(--theme--foreground);
 }
 .cm-s-default .cm-builtin {
 	color: var(--primary);
