--- a/app/src/styles/lib/_frappe-charts.scss
+++ b/app/src/styles/lib/_frappe-charts.scss
@@ -5,7 +5,7 @@
 	.axis,
 	.chart-label {
 		font-size: 10px;
-		fill: var(--foreground-normal);
+		fill: var(--theme--foreground);
 
 		line {
 			stroke: var(--border-normal);
@@ -57,7 +57,7 @@
 
 	.legend-dataset-text {
 		font-weight: 600;
-		fill: var(--foreground-normal);
+		fill: var(--theme--foreground);
 	}
 }
 
