--- a/app/src/styles/lib/_mapbox.scss
+++ b/app/src/styles/lib/_mapbox.scss
@@ -31,7 +31,7 @@
 
 		&.active {
 			color: var(--background-subdued) !important;
-			background: var(--foreground-normal) !important;
+			background: var(--theme--foreground) !important;
 		}
 
 		&.hidden {
@@ -79,7 +79,7 @@
 .mapboxgl-ctrl-attrib.mapboxgl-compact {
 	min-width: 24px;
 	min-height: 24px;
-	color: var(--foreground-normal);
+	color: var(--theme--foreground);
 	background: var(--background-input) !important;
 	box-shadow: var(--card-shadow);
 
@@ -95,7 +95,7 @@
 	}
 
 	a {
-		color: var(--foreground-normal);
+		color: var(--theme--foreground);
 		&:hover {
 			color: var(--foreground-normal-alt);
 		}
@@ -110,13 +110,13 @@
 
 .mapboxgl-ctrl-attrib:not(.mapboxgl-compact) {
 	font-size: 0.8em;
-	color: var(--foreground-normal);
+	color: var(--theme--foreground);
 	background: var(--background-input);
 	border-radius: 0 6px 0 0;
 	box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.1);
 
 	a {
-		color: var(--foreground-normal);
+		color: var(--theme--foreground);
 
 		&:hover {
 			color: var(--foreground-normal-alt);
@@ -142,7 +142,7 @@
 }
 
 .mapboxgl-ctrl-geocoder--input {
-	color: var(--foreground-normal) !important;
+	color: var(--theme--foreground) !important;
 	border-radius: var(--border-radius);
 }
 
@@ -152,7 +152,7 @@
 }
 
 .mapboxgl-ctrl-geocoder .suggestions > li > a {
-	color: var(--foreground-normal);
+	color: var(--theme--foreground);
 }
 
 .mapboxgl-ctrl-geocoder .suggestions > .active > a,
