--- a/app/src/styles/mixins/type-styles.scss
+++ b/app/src/styles/mixins/type-styles.scss
@@ -21,7 +21,7 @@
 }
 
 @mixin type-text {
-	color: var(--foreground-normal);
+	color: var(--theme--foreground);
 	font-weight: 500;
 	font-size: 14px;
 	font-family: var(--family-sans-serif);
