--- a/app/src/styles/lib/_fullcalendar.scss
+++ b/app/src/styles/lib/_fullcalendar.scss
@@ -1,7 +1,7 @@
 .fc {
 	--fc-event-bg-color: var(--theme--primary);
 	--fc-event-border-color: var(--theme--primary);
-	--fc-today-bg-color: var(--primary-10);
+	--fc-today-bg-color: var(--primary-alt);
 	--fc-button-bg-color: transparent;
 	--fc-button-active-bg-color: transparent;
 	--fc-button-hover-bg-color: transparent;
@@ -10,7 +10,7 @@
 	--fc-button-hover-border-color: transparent;
 	--fc-button-text-color: var(--theme--foreground-subdued);
 	--fc-border-color: var(--border-normal);
-	--fc-highlight-color: var(--primary-10);
+	--fc-highlight-color: var(--primary-alt);
 	--fc-neutral-bg-color: var(--background-normal);
 	--fc-list-event-hover-bg-color: var(--background-subdued);
 
