--- a/app/src/styles/themes/_dark.scss
+++ b/app/src/styles/themes/_dark.scss
@@ -28,7 +28,7 @@
 	--background-input: #0d1117;
 	--background-page-rgb: 13, 17, 23;
 	--background-inverted: #fff;
-	--background-mark: var(--primary-50);
+	--background-mark: var(--primary-25);
 
 	--card-face-color: var(--background-subdued);
 	--card-shadow-color: 0, 0, 0;
@@ -53,7 +53,7 @@
 	--yellow-alt: var(--yellow-10);
 	--orange-alt: var(--orange-10);
 	--red-alt: var(--red-10);
-	--primary-alt: var(--primary-10);
+	--primary-alt: var(--primary-alt);
 	--secondary-alt: var(--secondary-10);
 	--success-alt: var(--green-10);
 	--warning-alt: var(--yellow-10);
