--- a/app/src/styles/themes/_light.scss
+++ b/app/src/styles/themes/_light.scss
@@ -2,6 +2,21 @@
 @mixin light {
 	color-scheme: light;
 
+	--primary-alt: #f0ecff !important;
+	--primary-10: #f0ecff !important;
+	--primary-25: #d9d0ff !important;
+	--primary-50: #b3a1ff !important;
+	--primary-75: #8c73ff !important;
+	--primary-90: #7557ff !important;
+
+	--primary: #6644ff !important;
+
+	--primary-110: #5e41ec !important;
+	--primary-125: #523dcf !important;
+	--primary-150: #3e369f !important;
+	--primary-175: #2b3070 !important;
+	--primary-190: #1f2c53 !important;
+
 	--border-normal: #d3dae4;
 	--border-normal-alt: #a2b5cd;
 	--border-subdued: #f0f4f9;
