--- a/app/src/styles/themes/_dark.scss
+++ b/app/src/styles/themes/_dark.scss
@@ -25,7 +25,7 @@
 	--background-subdued: #161b22;
 	--background-highlight: #1d1d21;
 	--background-page: #0d1117;
-	--background-input: #0d1117;
+	--theme--form--field--input--background: #0d1117;
 	--background-page-rgb: 13, 17, 23;
 	--background-inverted: #fff;
 	--background-mark: var(--theme--primary-subdued);
