--- a/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
+++ b/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
@@ -5,21 +5,21 @@
 .tox .tox-tbtn {
 	height: 36px;
 	margin: 0;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 }
 
 .tox .tox-listbox__select-chevron svg,
 .tox .tox-collection__item-caret svg {
-	fill: var(--theme--foreground);
+	fill: var(--theme--form--field--input--foreground);
 }
 
 .tox .tox-swatches__picker-btn svg {
-	fill: var(--theme--foreground);
+	fill: var(--theme--form--field--input--foreground);
 }
 
 .tox .tox-tbtn svg,
 .tox .tox-tbtn:hover svg {
-	fill: var(--theme--foreground);
+	fill: var(--theme--form--field--input--foreground);
 }
 
 .tox-tbtn[aria-label='Bold'] .tox-icon svg {
@@ -29,7 +29,7 @@
 .tox-tbtn[aria-label='Bold'] .tox-icon::after {
 	display: inline-block;
 	margin-top: 4px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-size: 24px;
 	font-family: 'Material Symbols';
 	content: 'format_bold';
@@ -43,7 +43,7 @@
 .tox-tbtn[aria-label='Italic'] .tox-icon::after {
 	display: inline-block;
 	margin-top: 4px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-size: 24px;
 	font-family: 'Material Symbols';
 	content: 'format_italic';
@@ -57,7 +57,7 @@
 .tox-tbtn[aria-label='Underline'] .tox-icon::after {
 	display: inline-block;
 	margin-top: 4px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-size: 24px;
 	font-family: 'Material Symbols';
 	content: 'format_underlined';
@@ -71,7 +71,7 @@
 .tox-tbtn[aria-label='Add/Edit Link'] .tox-icon::after {
 	display: inline-block;
 	margin-top: 4px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-size: 24px;
 	font-family: 'Material Symbols';
 	content: 'insert_link';
@@ -84,12 +84,12 @@
 }
 
 .tox .tox-edit-area__iframe {
-	background-color: var(--background-input);
+	background-color: var(--theme--form--field--input--background);
 }
 
 .tox-tinymce {
 	min-height: 300px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	border: 2px solid var(--border-normal);
 	border-radius: var(--border-radius);
 	transition: var(--fast) var(--transition);
@@ -147,7 +147,7 @@ body.dark .tox .tox-toolbar__overflow {
 .tox .tox-split-button:hover,
 .tox .tox-tbtn:hover,
 .tox .tox-split-button:focus {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	background: var(--border-normal);
 }
 
@@ -189,7 +189,7 @@ body.dark .tox .tox-toolbar__overflow {
 }
 
 .tox .tox-dialog {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	background-color: var(--theme--background);
 	border: none;
 	box-shadow: none;
@@ -201,13 +201,13 @@ body.dark .tox .tox-toolbar__overflow {
 
 .tox .tox-dialog__header {
 	padding: 20px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-size: 16px;
 	background-color: var(--theme--background);
 }
 
 .tox .tox-dialog__body {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 }
 
 .tox .tox-dialog__body-content {
@@ -216,7 +216,7 @@ body.dark .tox .tox-toolbar__overflow {
 
 .tox .tox-dialog__footer {
 	padding: 0 24px 24px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	background-color: var(--theme--background);
 	border-top: none;
 }
@@ -227,7 +227,7 @@ body.dark .tox .tox-toolbar__overflow {
 .tox .tox-selectfield select,
 .tox .tox-textarea {
 	padding: 12px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-weight: 500;
 	font-size: 14px;
 	font-family: var(--family-sans-serif);
@@ -252,7 +252,7 @@ body.dark .tox .tox-toolbar__overflow {
 .tox .tox-menu {
 	box-sizing: border-box;
 	padding: 4px !important;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-family: var(--family-sans-serif);
 	background-color: var(--background-subdued);
 	border: 2px solid var(--border-normal);
@@ -264,12 +264,12 @@ body.dark .tox .tox-toolbar__overflow {
 }
 
 .tox .tox-collection--list .tox-collection__item {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 }
 
 .tox .tox-collection--list .tox-collection__item--enabled,
 .tox .tox-collection--list .tox-collection__item--active {
-	color: var(--theme--foreground) !important;
+	color: var(--theme--form--field--input--foreground) !important;
 	background-color: var(--background-normal-alt) !important;
 }
 
@@ -278,7 +278,7 @@ body.dark .tox .tox-toolbar__overflow {
 }
 
 .tox .tox-collection__item-accessory {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 }
 
 .tox .tox-textfield:focus,
@@ -316,13 +316,13 @@ body.dark .tox .tox-toolbar__overflow {
 }
 
 .tox .tox-button--secondary {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	background-color: var(--background-normal);
 	border-color: var(--background-normal);
 }
 
 .tox .tox-button--secondary:hover:not(:disabled) {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	background-color: var(--background-normal);
 	border-color: var(--background-normal);
 }
@@ -330,13 +330,13 @@ body.dark .tox .tox-toolbar__overflow {
 .tox .tox-button--naked {
 	min-width: auto;
 	height: auto;
-	color: var(--theme--foreground-subdued);
+	color: var(--theme--form--field--input--foreground-subdued);
 	background-color: transparent;
 	border-color: transparent;
 }
 
 .tox .tox-button--naked.tox-button--icon:hover:not(:disabled) {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	background-color: transparent;
 	border-color: transparent;
 }
@@ -348,7 +348,7 @@ body.dark .tox .tox-toolbar__overflow {
 .tox .tox-label,
 .tox .tox-toolbar-label {
 	margin-bottom: 4px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-weight: 500;
 	font-size: 16px;
 }
@@ -358,7 +358,7 @@ body.dark .tox .tox-toolbar__overflow {
 	width: 100%;
 	margin-bottom: 4px;
 	padding: 12px 16px;
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 	font-weight: 500;
 	font-size: 14px;
 	border-bottom: none;
@@ -386,7 +386,7 @@ body.dark .tox .tox-toolbar__overflow {
 }
 
 .tox .tox-insert-table-picker__label {
-	color: var(--theme--foreground);
+	color: var(--theme--form--field--input--foreground);
 }
 
 .tox .tox-insert-table-picker > div {
