--- a/app/src/styles/lib/_flatpickr.scss
+++ b/app/src/styles/lib/_flatpickr.scss
@@ -313,7 +313,7 @@ span.flatpickr-weekday {
 .flatpickr-time .flatpickr-am-pm:focus {
 	border: var(--border-width) solid var(--theme--primary);
 	border-radius: var(--border-radius);
-	background-color: var(--background-input);
+	background-color: var(--theme--form--field--input--background);
 }
 
 .flatpickr-time input::selection {
