--- a/app/src/styles/lib/_emoji-picker.scss
+++ b/app/src/styles/lib/_emoji-picker.scss
@@ -1,7 +1,7 @@
 .emoji-picker__wrapper {
 	.emoji-picker {
 		--category-button-active-color: var(--theme--primary);
-		--font: var(--family-sans-serif);
+		--font: var(--theme--font-family-sans-serif);
 		--text-color: var(--theme--foreground);
 		--dark-text-color: var(--theme--foreground);
 		--secondary-text-color: var(--theme--foreground-accent);
