--- a/app/src/styles/lib/_frappe-charts.scss
+++ b/app/src/styles/lib/_frappe-charts.scss
@@ -1,6 +1,6 @@
 .chart-container {
 	position: relative;
-	font-family: var(--family-sans-serif);
+	font-family: var(--theme--font-family-sans-serif);
 
 	.axis,
 	.chart-label {
