--- a/app/src/styles/_base.scss
+++ b/app/src/styles/_base.scss
@@ -21,7 +21,7 @@ body {
 	color: var(--theme--foreground);
 	font-weight: 500;
 	font-size: 14px;
-	font-family: var(--family-sans-serif);
+	font-family: var(--theme--font-family-sans-serif);
 	font-style: normal;
 	line-height: 22px;
 	background-color: var(--theme--background);
@@ -108,7 +108,7 @@ strong {
 }
 
 code {
-	font-family: var(--family-monospace);
+	font-family: var(--theme--font-family-monospace);
 }
 
 ::selection {
