--- a/app/src/styles/_markdown.scss
+++ b/app/src/styles/_markdown.scss
@@ -96,7 +96,7 @@ code {
 	padding: 2px 4px;
 	font-weight: 500;
 	font-size: 15px;
-	font-family: var(--family-monospace), monospace;
+	font-family: var(--theme--font-family-monospace), monospace;
 	line-height: 24px;
 	overflow-wrap: break-word;
 	background-color: var(--background-normal);
@@ -108,7 +108,7 @@ pre {
 	overflow: auto;
 	font-weight: 500;
 	font-size: 15px;
-	font-family: var(--family-monospace), monospace;
+	font-family: var(--theme--font-family-monospace), monospace;
 	line-height: 24px;
 	background-color: var(--background-normal);
 	border-radius: var(--border-radius);
