--- a/app/src/styles/_tooltip.scss
+++ b/app/src/styles/_tooltip.scss
@@ -24,7 +24,7 @@
 	}
 
 	&.monospace {
-		font-family: var(--family-monospace);
+		font-family: var(--theme--font-family-monospace);
 	}
 
 	&.visible {
