--- a/app/src/styles/lib/_codemirror.scss
+++ b/app/src/styles/lib/_codemirror.scss
@@ -5,7 +5,7 @@
 	height: auto;
 	color: var(--theme--foreground);
 	font-weight: inherit;
-	font-family: var(--family-monospace);
+	font-family: var(--theme--font-family-monospace);
 	line-height: 22px;
 	direction: ltr;
 	background-color: var(--theme--form--field--input--background);
@@ -287,7 +287,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
 	color: var(--foreground-inverted);
 	background-color: var(--background-inverted);
 	border-radius: var(--border-radius);
-	font-family: var(--family-monospace);
+	font-family: var(--theme--font-family-monospace);
 	white-space: pre-wrap;
 	overflow: hidden;
 	opacity: 0;
