--- a/app/src/styles/themes/_dark.scss
+++ b/app/src/styles/themes/_dark.scss
@@ -15,17 +15,13 @@
 	--border-normal-alt: #484f58;
 	--border-subdued: #21262d;
 
-	--foreground-normal: #c9d1d9;
-	--foreground-normal-alt: #f0f6fc;
-	--foreground-subdued: #666672;
 	--foreground-inverted: #0d1117;
 
 	--background-normal: #21262e;
 	--background-normal-alt: #30363d;
 	--background-subdued: #161b22;
 	--background-highlight: #1d1d21;
-	--background-page: #0d1117;
-	--theme--form--field--input--background: #0d1117;
+	--background-input: #0d1117;
 	--background-page-rgb: 13, 17, 23;
 	--background-inverted: #fff;
 	--background-mark: var(--theme--primary-subdued);
@@ -38,11 +34,6 @@
 	--header-shadow: 0 4px 7px -4px rgb(var(--black) / 0.2);
 	--navigation-shadow: 0px 0px 12px var(--black);
 	--sidebar-shadow: var(--navigation-shadow);
-
-	--module-background: var(--theme--background);
-	--module-background-alt: var(--background-normal);
-	--module-icon: var(--theme--foreground-subdued);
-	--module-icon-alt: var(--theme--foreground-accent);
 
 	// Generate color variations
 	@include generate-colors($color-mapping, $dark-theme-shade, $dark-theme-tint);
