--- a/app/src/styles/_variables.scss
+++ b/app/src/styles/_variables.scss
@@ -10,7 +10,7 @@
 	--header-bar-height: 61px;
 	--content-padding: 12px;
 	--border-width: 2px;
-	--border-radius: 4px;
+	--theme--border-radius: 4px;
 	--input-height: 52px;
 	--input-height-tall: 168px;
 	--input-height-max: 500px;
