--- a/app/src/styles/lib/_codemirror.scss
+++ b/app/src/styles/lib/_codemirror.scss
@@ -9,7 +9,7 @@
 	line-height: 22px;
 	direction: ltr;
 	background-color: var(--theme--form--field--input--background);
-	border: var(--border-width) solid var(--border-normal);
+	border: var(--theme--border-width) solid var(--border-normal);
 	border-radius: var(--theme--border-radius);
 	transition: all var(--fast) var(--transition);
 }
