--- a/app/src/styles/lib/_flatpickr.scss
+++ b/app/src/styles/lib/_flatpickr.scss
@@ -181,7 +181,7 @@ span.flatpickr-weekday {
 
 .flatpickr-day.today {
 	border-color: var(--theme--primary);
-	border-width: var(--border-width);
+	border-width: var(--theme--border-width);
 }
 
 .flatpickr-day.today:hover,
@@ -288,7 +288,7 @@ span.flatpickr-weekday {
 .flatpickr-calendar.hasTime .flatpickr-time {
 	height: 43px;
 	margin-top: 8px;
-	border-top: var(--border-width) solid var(--border-subdued);
+	border-top: var(--theme--border-width) solid var(--border-subdued);
 }
 
 .flatpickr-calendar.noCalendar .flatpickr-time {
@@ -311,7 +311,7 @@ span.flatpickr-weekday {
 
 .flatpickr-time input:focus,
 .flatpickr-time .flatpickr-am-pm:focus {
-	border: var(--border-width) solid var(--theme--primary);
+	border: var(--theme--border-width) solid var(--theme--primary);
 	border-radius: var(--theme--border-radius);
 	background-color: var(--theme--form--field--input--background);
 }
@@ -324,7 +324,7 @@ span.flatpickr-weekday {
 	width: 100%;
 	padding: 8px 0;
 	color: var(--theme--primary);
-	border-top: var(--border-width) solid var(--border-subdued);
+	border-top: var(--theme--border-width) solid var(--border-subdued);
 	transition: background-color var(--fast) var(--transition);
 }
 
